yaml-standard/cast-db.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: cast-db
  namespace: dev
spec:
  serviceName: "cast-db"
  replicas: 1
  selector:
    matchLabels:
      app: cast-db
  template:
    metadata:
      labels:
        app: cast-db
    spec:
      containers:
      - name: cast-db
        image: postgres:12.1-alpine
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: cast-db-storage
          mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
  - metadata:
      name: cast-db-storage
    spec:
      accessModes: ["ReadWriteOnce"]
      resources:
        requests:
          storage: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  name: cast-db
  namespace: dev
spec:
  selector:
    app: cast-db
  ports:
  - port: 5432
