yaml-standard/movie-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: movie-service
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: movie-service
  template:
    metadata:
      labels:
        app: movie-service
    spec:
      containers:
      - name: movie-service
        image: movie-service  
        command: ["uvicorn"]
        args: ["app.main:app", "--reload", "--host", "0.0.0.0", "--port", "8000"]
        ports:
        - containerPort: 8000
        volumeMounts:
        - name: movie-service-storage
          mountPath: /app/data
      volumes:
      - name: movie-service-storage
        persistentVolumeClaim:
          claimName: movie-service-claim0
---
apiVersion: v1
kind: Service
metadata:
  name: movie-service
  namespace: dev
spec:
  selector:
    app: movie-service
  ports:
  - port: 8000
    targetPort: 8000
